Z-Indexed to fix topbar from blocking buttons

--- a/client/src/css/Estimator.css
+++ b/client/src/css/Estimator.css
@@ -11,6 +11,7 @@
   width: 170px;
   height: 170px;
   display: inline-flex;
+	z-index: 0;
 }
 
 .selectedButton {
@@ -28,6 +29,7 @@
   display: inline-flex;
 	border: 6px solid #FFFFFF;
 	box-shadow: 0 0 0 3px #2B2B2B;
+	z-index: 0;
 }
 
 .bottomButtons{
