--- a/client/src/css/Sidebar.css
+++ b/client/src/css/Sidebar.css
@@ -39,6 +39,7 @@ a {
   margin-bottom: -50%;
   display: flex;
   justify-content: center;
+  z-index: -1;
 }
 
 .sidebar-clearfix {
